[package]
name = "indextree"
version = "1.0.0"
license = "MIT"
readme = "README.md"
keywords = ["tree", "arena", "index", "indextree", "trie"]
authors = ["Christopher Chin <ctchin13@gmail.com>", "Sascha Grunert <mail@saschagruenrt.de>"]
repository = "https://github.com/Meptl/indextree"
homepage = "https://github.com/Meptl/indextree"
description = "Arena based tree structure by using indices instead of reference counted pointers"
categories = ["data-structures"]
